tests/build/cases/widget_new/unknown_member_in_when_expr1.stderr
error[E0599]: no associated item named `__w_1__` found for struct `is_pressed` in the current scope
 --> cases/widget_new/unknown_member_in_when_expr1.rs:7:16
  |
7 |         when *#is_pressed.1 { // only .0 or .state allowed.
  |                ^^^^^^^^^^
  |                |
  |                associated item not found in `is_pressed`
  |                help: there is an associated function with a similar name: `__w_0__`
